fix display of line break in note-show
- Some parts could not be displayed

--- a/app/assets/stylesheets/atoms/_card.sass
+++ b/app/assets/stylesheets/atoms/_card.sass
@@ -18,7 +18,8 @@
   @media screen and (min-width:980px)
     padding: 0.5rem 1rem
   p
-    word-break: break-all
+    white-space: pre-wrap
+    word-break: break-word
 
   &:first-child
     border-top: solid 1px $card-border-color
